# minimal-d3d

./: CMakeLists.txt  README.md
src/: main.cpp
